<resources>
    <!-- activity names -->
    <string name="app_name">Whiz Bang</string>
    <string name="action_settings">Settings</string>
    <string name="add_client">Add New Client</string>
    <string name="edit_delete">Edit ~ Delete</string>
    <string name="confirm_amount">Confirm Amount</string>

    <!-- add client activity -->
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_address_label">Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="blanks_not_filled">Please fill First Name, Email and/or Phone Number.</string>

    <!-- confirm activity -->
    <string name="no_clients_installed">No available email client, Please install one</string>
    <string name="no_amount_owed">Please enter amount owed</string>
    <string name="send_via_text">Message will be sent via Text Message</string>
    <string name="send_via_email">Message will be sent via Email</string>

    <!-- edit~delete activity -->
    <string name="edit_first_name">Edit First Name</string>
    <string name="edit_last_name">Edit Last Name</string>
    <string name="edit_email_address">Edit Email Address</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="record_deleted">Record was deleted</string>
    <string name="delete">Delete</string>
    <string name="save">Save changes</string>

    <!-- menu strings -->
    <string name="add_new_client">Add New Client</string>

    <!-- search hint string -->
    <string name="search_hint">Search...</string>
</resources>
