<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.android.whizbang.MainActivity">

    <item
        android:id="@+id/search_view"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>


    <item
        android:id="@+id/add_applicant"
        android:orderInCategory="100"
        android:title="@string/add_new_client"
        android:icon="@drawable/ic_add_new_client"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
